--- a/sms-web/package.json
+++ b/sms-web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.8.2",
     "vue": "^3.4.29"
   },
   "devDependencies": {
